--- a/views/category.html
+++ b/views/category.html
@@ -22,7 +22,7 @@
                     </div>
                     <h2><a href="/products/{$value.desurl}">{$value.desproduct}</a></h2>
                     <div class="product-carousel-price">
-                        <ins>R${function="formatReal($value.vlprice)"}</ins>
+                        <ins>R${function="formatPrice($value.vlprice)"}</ins>
                     </div>  
                     
                     <div class="product-option-shop">
@@ -39,22 +39,9 @@
                 <div class="product-pagination text-center">
                     <nav>
                         <ul class="pagination">
-                        <li>
-                            <a href="#" aria-label="Previous">
-                            <span aria-hidden="true">«</span>
-                            </a>
-                        </li>
-                        <li><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
-                        <li>
-                            <a href="#" aria-label="Next">
-                            <span aria-hidden="true">»</span>
-                            </a>
-                        </li>
-                        </ul>
+                        {loop="$pages"}
+                        <li><a href="{$value.link}">{$value.page}</a></li>
+                        {/loop}
                     </nav>                        
                 </div>
             </div>
