correção de erros

--- a/views/category.html
+++ b/views/category.html
@@ -14,7 +14,7 @@
     <div class="zigzag-bottom"></div>
     <div class="container">
         <div class="row">
-            {loop="$produtos"}
+            {loop="$products"}
             <div class="col-md-3 col-sm-6">
                 <div class="single-shop-product">
                     <div class="product-upper">
@@ -26,7 +26,7 @@
                     </div>  
                     
                     <div class="product-option-shop">
-                        <a class="add_to_cart_button" data-quantity="1" data-product_sku="" data-product_id="70" rel="nofollow" href="/canvas/shop/?add-to-cart=70"> Comprar</a>
+                        <a class="add_to_cart_button" data-quantity="1" data-product_sku="" data-product_id="70" rel="nofollow" href="/cart/{$value.idproduct}/add"> Comprar</a>
                     </div>                       
                 </div>
             </div>
@@ -42,6 +42,7 @@
                         {loop="$pages"}
                         <li><a href="{$value.link}">{$value.page}</a></li>
                         {/loop}
+                        </ul>
                     </nav>                        
                 </div>
             </div>
