Categorias - Busca e Paginacao

--- a/views/admin/users.html
+++ b/views/admin/users.html
@@ -62,6 +62,13 @@
               </table>
             </div>
             <!-- /.box-body -->
+            <div class="box-footer clearfix">
+              <ul class="pagination pagination-sm no-margin pull-right">
+                {loop="$pages"}
+                <li><a href="{$value.href}">{$value.text}</a></li>
+                {/loop}
+              </ul>
+            </div>
           </div>
   	</div>
   </div>
